changes made to paths

--- a/R_tutorial.Rmd
+++ b/R_tutorial.Rmd
@@ -3,6 +3,7 @@ title: "leaRn"
 output:
   html_document:
     df_print: paged
+    keep_md: true
   pdf_document: default
   html_notebook: default
 ---
